--- a/docs/guide.tex
+++ b/docs/guide.tex
@@ -23,6 +23,11 @@
 \usepackage{pifont,mdframed}
 \usepackage{framed}
 
+% algorithms
+\usepackage[]{algorithm}
+\usepackage[]{algpseudocode}
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -83,5 +88,6 @@
 \include{content/introduction}
 \include{content/components}
 \include{content/examples}
+\include{content/simulation}
 
 \end{document}
