--- a/docs/guide.tex
+++ b/docs/guide.tex
@@ -87,6 +87,7 @@
 
 \include{content/introduction}
 \include{content/components}
+\include{content/catalog}
 \include{content/examples}
 \include{content/simulation}
 
