--- a/docs/content/components.tex
+++ b/docs/content/components.tex
@@ -1,7 +1,9 @@
-\section{Components}
+\section{Inside Components}
 \label{sec:2}
 
-This section introduces each component in detail, including  what data they expect, what data they output, what parameters can be set. After reading this section, you should able to select appropriate components for a specific algorithmic trading purpose, parameterize and connect them correctly.
+This section first explains in detail how to define components, create instances of components and connect components. Then each component is introduced in detail, including what data they expect, what data they output, what parameters can be set.
+
+After reading this section, you should able to select appropriate components for a specific algorithmic trading purpose, parameterize and connect them correctly.
 
 \subsection{Define a Component}
 
@@ -56,25 +58,24 @@ To create an instance of a component, we have to first create a \emph{component 
 val builder = new ComponentBuilder("test")
 \end{lstlisting}
 
-Now suppose we have a Component \emph{Arbitrageur} defined as follows:
+Now suppose we have a Component \emph{OhlcIndicator} defined as follows:
 
 \begin{lstlisting}[language=Scala]
-  class Arbitrageur(id: Long, delta: Double, volume: Double) extends Component
-  {
-    //...
+  class OhlcIndicator(marketId: Long, symbol: (Currency,Currency), tickSizeMillis: Long) extends Component   {
+    // ...
   }
 \end{lstlisting}
 
-Then we can create an instance of \emph{Arbitrageur} with following code snippet:
+Then we can create an instance of \emph{OhlcIndicator} with following code snippet:
 
 \begin{lstlisting}[language=Scala]
-  val props = Props(classOf[Arbitrageur], 111L, 1, 50)
-  val arbitrageur = builder.createRef(props, "arbitrageur")
+  val props = Props(classOf[OhlcIndicator], 1L, Currency.USD -> Currency.CHF, 50)
+  val ohlc = builder.createRef(props, "ohlc")
 \end{lstlisting}
 
-As you can see in the code snippet above, first we create an instance of \emph{Props}\footnote{\url{http://doc.akka.io/api/akka/2.3.1/index.html\#akka.actor.Props}}. The first argument to \emph{Props} is the class we want to instantiate, and the remaining arguments are exactly the parameters that the constructor of the class \emph{Arbitrageur} expects.
+As you can see in the code snippet above, first we create an instance of \emph{Props}\footnote{\url{http://doc.akka.io/api/akka/2.3.1/index.html\#akka.actor.Props}}. The first argument to \emph{Props} is the class we want to instantiate, and the remaining arguments are exactly the parameters that the constructor of the class \emph{OhlcIndicator} expects.
 
-In the second line, \emph{builder.createRef} then takes \emph{props} and a name for the component to create an instance of the component. Note that the return value of \emph{builder.createRef} is a pointer to an instance of \emph{ComponentRef} instead of \emph{Arbitrageur}.
+In the second line, \emph{builder.createRef} then takes \emph{props} and a name for the component to create an instance of the component. Note that the return value of \emph{builder.createRef} is a pointer to an instance of \emph{ComponentRef} instead of \emph{OhlcIndicator}.
 
 We have learned how to created instances of components, next let's see how to connect them.
 
@@ -84,75 +85,74 @@ Internally, \emph{builder.createRef} will call \emph{actorOf} on an instance of 
 
 \subsection{Connect Components}
 
-To connect an upstream component A to a downstream component B, we need to specify what types of messages B expects to receive from A. During the running A would only send messages of the specified types to B. For example, in the following code snippet, \emph{sobiTrader} will only send \emph{LimitBidOrder} messages to \emph{market}, and only send \emph{LimitAskOrder} messages to \emph{display}.
+To connect an upstream component A to a downstream component B, we need to specify what types of messages B expects to receive from A. During the running A would only send messages of the specified types to B. For example, in the following code snippet, \emph{trader} will only send \emph{LimitBidOrder} messages to \emph{market}, and only send \emph{LimitAskOrder} messages to \emph{display}.
 
 \begin{lstlisting}[language=Scala]
-  sobiTrader -> (market, classOf[LimitBidOrder])
-  sobiTrader -> (display, classOf[LimitAskOrder])
+  trader -> (market, classOf[LimitBidOrder])
+  trader -> (display, classOf[LimitAskOrder])
 \end{lstlisting}
 
-A downstream component can register as many message types as the upstream component can provide. For example, in the following code snippet \emph{sobiTrader} would send both \emph{LimitBidOrder} and \emph{LimitAskOrder} messages to \emph{market}.
+A downstream component can register as many message types as the upstream component can provide. For example, in the following code snippet \emph{trader} would send both \emph{LimitBidOrder} and \emph{LimitAskOrder} messages to \emph{market}.
 
 \begin{lstlisting}[language=Scala]
-  sobiTrader -> (market, classOf[LimitBidOrder], classOf[LimitAskOrder])
+  trader -> (market, classOf[LimitBidOrder], classOf[LimitAskOrder])
 \end{lstlisting}
 
 If a downstream component registers a message type that the upstream component can't provide, the registration has no effect. In practice, it's important to check carefully what messages a component can receive and provide.
 
-\subsection{Simulators}
-
-Details of various simulators
-
-\begin{itemize}
-\item MarketSimulator
-\item MarketFxSimulator
-\end{itemize}
-
-\subsection{Indicators}
-
-Details various indicators
-
-\begin{itemize}
-\item MA
-\item EMA
-\item SMA
-\item OHLC
-\end{itemize}
-
 \subsection{Traders}
 
-Details of various traders
+Traders are basically components, but their definition and creation are more involved, so they need a special section.
+
+In order to support automatic optimization of strategy parameters, all traders take parameters as following:
+
+\begin{lstlisting}[language=Scala]
+  class MovingAverageTrader(uid: Long, parameters: StrategyParameters) extends Trader(uid, parameters) {
+    // ...
+  }
+\end{lstlisting}
+
+The first parameter is the trader ID, the second parameter is a collection of parameters. There are following types of parameters:
 
 \begin{itemize}
-\item Arbitrageur
-\item DoubleCrossOverTrader
-\item DoubleEnvelopeTrader
-\item SimpleFXTrader
-\item SimplerTrader
-\item SobiTrader
-\item TransactionVmapTrader
+\item \emph{BooleanParameter}: represents boolean parameters.
+\item \emph{CoefficientParameter}: represents a floating point coefficient in range [0, 1].
+\item \emph{NaturalNumberParameter}: represents an integer number greater or equal to zero.
+\item \emph{RealNumberParameter}: represents a real number greater than an initial value.
+\item \emph{TimeParameter}: represents a duration of time.
+\item \emph{CurrencyPairParameter}: represents a pair of currencies to be traded.
+\item \emph{WalletParameter}: represents funds in various currencies.
+\item \emph{MarketRulesParameter}: represents rules applied in a certain market.
 \end{itemize}
 
-\subsection{Fetchers}
+To create an instance of a specific trader, you need to know what parameters it takes exactly. The parameters information can be found both in code and documentation. Once you know what parameters a trader takes, you can create the \emph{StrategyParameters} object as follows:
 
-Details of various fecthers
+\begin{lstlisting}[language=Scala]
+  val initialFunds = Map(Currency.CHF -> 5000.0)
+  val parameters = new StrategyParameters(
+    MovingAverageTrader.INITIAL_FUNDS -> WalletParameter(initialFunds),
+    MovingAverageTrader.SYMBOL -> CurrencyPairParameter(symbol),
+    MovingAverageTrader.SHORT_PERIOD -> new TimeParameter(periods(0) seconds),
+    MovingAverageTrader.LONG_PERIOD -> new TimeParameter(periods(1) seconds),
+    MovingAverageTrader.TOLERANCE -> RealNumberParameter(0.0002))
+\end{lstlisting}
 
-\begin{itemize}
-\item BitfinexFetcher
-\item BitStampFetcher
-\item BtceFetcher
-\item CSVFetcher
-\item TrueFXFetcher
-\end{itemize}
+Now, you can create the trader with just one line of code as follows:
 
-\subsection{Utilities}
+\begin{lstlisting}[language=Scala]
+  val trader = MovingAverageTrader.getInstance(10L, parameters, "MovingAverageTrader")
+\end{lstlisting}
 
-Other components
+In the code above, \emph{MovingAverageTrader} is a companion object of the class \emph{MovingAverageTrader}, which provides the method \emph{getInstance} to create a new instance of the object. The method \emph{getInstance} takes a \emph{builder} as implicit parameter. Either make sure an implicit \emph{builder} is in scope or provide it explicitly.
 
-\begin{itemize}
-\item Printer
-\item Backloop
-\item Replay
-\item BatcherComponent
-\item Evaluator
-\end{itemize}
+\begin{warning}
+In theory, you can also create an instance of \emph{MovingAverageTrader} like a common component as follows. But this is not recommended, as the \emph{getInstance} approach provides more safety check of parameters.
+
+\begin{lstlisting}[language=Scala]
+  val trader = builder.createRef(Props(classOf[MovingAverageTrader], 10L, parameters), "trader")
+\end{lstlisting}
+\end{warning}
+
+Once created, traders can be connected exactly the same way as common components, thus it's omitted here.
+
+Definition of new traders is more involved, which I leave to the interested reader to discover in the code base\footnote{All information about traders can be found in the package \emph{ch.epfl.ts.traders}}.
