--- a/docs/content/components.tex
+++ b/docs/content/components.tex
@@ -1,9 +1,7 @@
 \section{Inside Components}
 \label{sec:2}
 
-This section first explains in detail how to define components, create instances of components and connect components. Then each component is introduced in detail, including what data they expect, what data they output, what parameters can be set.
-
-After reading this section, you should able to select appropriate components for a specific algorithmic trading purpose, parameterize and connect them correctly.
+This section explains in detail how to define components, create instances of components and connect components.
 
 \subsection{Define a Component}
 
