--- a/docs/guide.tex
+++ b/docs/guide.tex
@@ -27,7 +27,8 @@
 \usepackage[]{algorithm}
 \usepackage[]{algpseudocode}
 
-
+% tables
+\usepackage{tabularx}         % full-width
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
