--- a/docs/content/simulation.tex
+++ b/docs/content/simulation.tex
@@ -1,4 +1,9 @@
 \section{Simulation}
+Besides the opportunity to tune strategies on historical and live data we aim to
+create our own market simulation, meaning that prices are no longer defined 
+externally but evolve as a result of interplays between the entities we implemented.
+The purpose of this feature is to provide users with the opportunity to construct
+complete and running ecosystems.
 
 \subsection{Simplifying the Real Market}
 Our project implements essential parts of the foreign exchange market.
@@ -114,6 +119,9 @@ A similarly ill-posed problem occurs in a sellers-only market when a single trad
 decides to make an extremely high bid order (for a low volume) that forces the market
 maker to provide the respective bid price and eventually spend all its funds at buying
 overpriced offers.
+
+\subsection{Outline}
+
 
 %
 %\subsection{Brain Storm}
